--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
         "@react-navigation/native": "^6.0.13",
         "@react-navigation/native-stack": "^6.9.0",
         "expo": "~46.0.13",
+        "expo-app-loading": "~2.1.0",
         "expo-status-bar": "~1.4.0",
         "firebase": "8.2.3",
+        "galio-framework": "^0.8.0",
         "react": "18.0.0",
         "react-dom": "18.0.0",
         "react-native": "0.69.6",
