--- a/package.json
+++ b/package.json
@@ -1,32 +1,38 @@
 {
-    "name": "mysal",
-    "version": "1.0.0",
-    "main": "node_modules/expo/AppEntry.js",
-    "scripts": {
-        "start": "expo start",
-        "android": "expo start --android",
-        "ios": "expo start --ios",
-        "web": "expo start --web"
-    },
-    "dependencies": {
-        "@expo/webpack-config": "^0.17.0",
-        "@react-native-async-storage/async-storage": "~1.17.3",
-        "@react-navigation/native": "^6.0.13",
-        "@react-navigation/native-stack": "^6.9.0",
-        "expo": "~46.0.13",
-        "expo-app-loading": "~2.1.0",
-        "expo-status-bar": "~1.4.0",
-        "firebase": "8.2.3",
-        "galio-framework": "^0.8.0",
-        "react": "18.0.0",
-        "react-dom": "18.0.0",
-        "react-native": "0.69.6",
-        "react-native-safe-area-context": "4.3.1",
-        "react-native-screens": "~3.15.0",
-        "react-native-web": "~0.18.7"
-    },
-    "devDependencies": {
-        "@babel/core": "^7.12.9"
-    },
-    "private": true
+  "name": "mysal",
+  "version": "1.0.0",
+  "main": "node_modules/expo/AppEntry.js",
+  "scripts": {
+    "start": "expo start",
+    "android": "expo start --android",
+    "ios": "expo start --ios",
+    "web": "expo start --web"
+  },
+  "dependencies": {
+    "@expo/webpack-config": "^0.17.0",
+    "@react-native-async-storage/async-storage": "~1.17.3",
+    "@react-navigation/bottom-tabs": "^6.4.0",
+    "@react-navigation/native": "^6.0.13",
+    "@react-navigation/native-stack": "^6.9.0",
+    "@react-navigation/stack": "^6.3.2",
+    "expo": "~46.0.13",
+    "expo-app-loading": "~2.1.0",
+    "expo-status-bar": "~1.4.0",
+    "firebase": "8.2.3",
+    "galio-framework": "^0.8.0",
+    "native-base": "^3.4.18",
+    "react": "18.0.0",
+    "react-dom": "18.0.0",
+    "react-native": "0.69.6",
+    "react-native-gesture-handler": "~2.5.0",
+    "react-native-safe-area-context": "4.3.1",
+    "react-native-screens": "~3.15.0",
+    "react-native-vector-icons": "^9.2.0",
+    "react-native-web": "~0.18.7",
+    "react-navigation-tabs": "^2.11.2"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.12.9"
+  },
+  "private": true
 }
