--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "@react-navigation/native": "^6.0.13",
     "@react-navigation/native-stack": "^6.9.0",
     "@react-navigation/stack": "^6.3.2",
+    "date-fns": "^2.29.3",
     "expo": "~46.0.13",
     "expo-app-loading": "~2.1.0",
+    "expo-linear-gradient": "^11.4.0",
     "expo-status-bar": "~1.4.0",
     "firebase": "8.2.3",
     "galio-framework": "^0.8.0",
@@ -25,10 +27,12 @@
     "react-dom": "18.0.0",
     "react-native": "0.69.6",
     "react-native-gesture-handler": "~2.5.0",
-    "react-native-safe-area-context": "4.3.1",
+    "react-native-reanimated": "^2.12.0",
+    "react-native-safe-area-context": "^4.3.1",
     "react-native-screens": "~3.15.0",
     "react-native-vector-icons": "^9.2.0",
     "react-native-web": "~0.18.7",
+    "react-native-week-month-date-picker": "^0.3.0",
     "react-navigation-tabs": "^2.11.2"
   },
   "devDependencies": {
