--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@draftbit/ui": "^46.4.3",
     "@expo/webpack-config": "^0.17.0",
     "@react-native-async-storage/async-storage": "~1.17.3",
     "@react-navigation/bottom-tabs": "^6.4.0",
@@ -18,7 +19,7 @@
     "date-fns": "^2.29.3",
     "expo": "~46.0.13",
     "expo-app-loading": "~2.1.0",
-    "expo-linear-gradient": "^11.4.0",
+    "expo-linear-gradient": "~11.4.0",
     "expo-status-bar": "~1.4.0",
     "firebase": "8.2.3",
     "galio-framework": "^0.8.0",
@@ -26,17 +27,18 @@
     "react": "18.0.0",
     "react-dom": "18.0.0",
     "react-native": "0.69.6",
+    "react-native-calendars": "^1.1291.0",
     "react-native-gesture-handler": "~2.5.0",
-    "react-native-reanimated": "^2.12.0",
-    "react-native-safe-area-context": "^4.3.1",
+    "react-native-reanimated": "~2.9.1",
+    "react-native-safe-area-context": "4.3.1",
     "react-native-screens": "~3.15.0",
     "react-native-vector-icons": "^9.2.0",
     "react-native-web": "~0.18.7",
     "react-native-week-month-date-picker": "^0.3.0",
-    "react-navigation-tabs": "^2.11.2"
+    "react-native-svg": "12.3.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9"
+    "@babel/core": "^7.18.6"
   },
   "private": true
 }
