--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "react-native-vector-icons": "^9.2.0",
     "react-native-web": "~0.18.7",
     "react-native-week-month-date-picker": "^0.3.0",
-    "react-native-svg": "12.3.0"
+    "react-native-svg": "12.3.0",
+    "expo-updates": "~0.14.6"
   },
   "devDependencies": {
     "@babel/core": "^7.18.6"
