--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@expo/webpack-config": "^0.17.0",
     "@react-native-async-storage/async-storage": "~1.17.3",
     "@react-navigation/bottom-tabs": "^6.4.0",
+    "@react-navigation/material-top-tabs": "6.2.1",
     "@react-navigation/native": "^6.0.13",
     "@react-navigation/native-stack": "^6.9.0",
     "@react-navigation/stack": "^6.3.2",
@@ -21,6 +22,7 @@
     "expo-app-loading": "~2.1.0",
     "expo-linear-gradient": "~11.4.0",
     "expo-status-bar": "~1.4.0",
+    "expo-updates": "~0.14.6",
     "firebase": "8.2.3",
     "galio-framework": "^0.8.0",
     "native-base": "^3.4.18",
@@ -29,14 +31,16 @@
     "react-native": "0.69.6",
     "react-native-calendars": "^1.1291.0",
     "react-native-gesture-handler": "~2.5.0",
+    "react-native-paper": "^4.12.5",
     "react-native-reanimated": "~2.9.1",
     "react-native-safe-area-context": "4.3.1",
     "react-native-screens": "~3.15.0",
+    "react-native-svg": "12.3.0",
+    "react-native-tab-view": "^3.3.0",
     "react-native-vector-icons": "^9.2.0",
     "react-native-web": "~0.18.7",
     "react-native-week-month-date-picker": "^0.3.0",
-    "react-native-svg": "12.3.0",
-    "expo-updates": "~0.14.6"
+    "react-navigation": "^4.4.4"
   },
   "devDependencies": {
     "@babel/core": "^7.18.6"
