--- a/package.json
+++ b/package.json
@@ -22,8 +22,9 @@
     "expo-app-loading": "~2.1.0",
     "expo-linear-gradient": "~11.4.0",
     "expo-status-bar": "~1.4.0",
-    "expo-updates": "~0.14.6",
+    "expo-updates": "~0.14.7",
     "firebase": "8.2.3",
+    "@expo/vector-icons": "^13.0.0",
     "galio-framework": "^0.8.0",
     "native-base": "^3.4.18",
     "react": "18.0.0",
@@ -34,13 +35,15 @@
     "react-native-paper": "^4.12.5",
     "react-native-reanimated": "~2.9.1",
     "react-native-safe-area-context": "4.3.1",
+    "react-native-pager-view": "5.4.24",
     "react-native-screens": "~3.15.0",
     "react-native-svg": "12.3.0",
     "react-native-tab-view": "^3.3.0",
     "react-native-vector-icons": "^9.2.0",
     "react-native-web": "~0.18.7",
     "react-native-week-month-date-picker": "^0.3.0",
-    "react-navigation": "^4.4.4"
+    "react-navigation": "^4.4.4",
+    "moment": "2.29.1"
   },
   "devDependencies": {
     "@babel/core": "^7.18.6"
