--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "mysal",
+  "name": "MySMG",
   "version": "1.0.0",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@draftbit/ui": "^46.4.3",
+    "@expo/vector-icons": "^13.0.0",
     "@expo/webpack-config": "^0.17.0",
     "@react-native-async-storage/async-storage": "~1.17.3",
     "@react-navigation/bottom-tabs": "^6.4.0",
@@ -24,26 +25,27 @@
     "expo-status-bar": "~1.4.0",
     "expo-updates": "~0.14.7",
     "firebase": "8.2.3",
-    "@expo/vector-icons": "^13.0.0",
     "galio-framework": "^0.8.0",
+    "intl": "^1.2.5",
+    "moment": "2.29.1",
     "native-base": "^3.4.18",
     "react": "18.0.0",
     "react-dom": "18.0.0",
     "react-native": "0.69.6",
     "react-native-calendars": "^1.1291.0",
     "react-native-gesture-handler": "~2.5.0",
+    "react-native-pager-view": "5.4.24",
     "react-native-paper": "^4.12.5",
+    "react-native-paper-dates": "^0.9.2",
     "react-native-reanimated": "~2.9.1",
     "react-native-safe-area-context": "4.3.1",
-    "react-native-pager-view": "5.4.24",
     "react-native-screens": "~3.15.0",
     "react-native-svg": "12.3.0",
     "react-native-tab-view": "^3.3.0",
     "react-native-vector-icons": "^9.2.0",
     "react-native-web": "~0.18.7",
     "react-native-week-month-date-picker": "^0.3.0",
-    "react-navigation": "^4.4.4",
-    "moment": "2.29.1"
+    "react-navigation": "^4.4.4"
   },
   "devDependencies": {
     "@babel/core": "^7.18.6"
